--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,14 @@ charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.5
 Flask==2.2.2
+Flask-SQLAlchemy==3.0.0
+greenlet==1.1.3
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
-python-dotenv==0.21.0
 requests==2.28.1
 soupsieve==2.3.2.post1
+SQLAlchemy==1.4.41
 urllib3==1.26.12
 Werkzeug==2.2.2
