--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.5
 Flask==2.2.2
+Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.0
+Flask-WTF==1.0.1
 greenlet==1.1.3
 idna==3.4
 itsdangerous==2.1.2
@@ -15,3 +17,4 @@ soupsieve==2.3.2.post1
 SQLAlchemy==1.4.41
 urllib3==1.26.12
 Werkzeug==2.2.2
+WTForms==3.0.1
