--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,17 @@
 alembic==1.8.1
+amqp==5.1.1
+async-timeout==4.0.2
 beautifulsoup4==4.11.1
+billiard==3.6.4.0
+celery==5.2.7
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 colorama==0.4.5
+Deprecated==1.2.13
 dnspython==2.2.1
 email-validator==1.3.0
 Flask==2.2.2
@@ -15,11 +23,21 @@ greenlet==1.1.3
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+kombu==5.2.4
 Mako==1.2.3
 MarkupSafe==2.1.1
+packaging==21.3
+prompt-toolkit==3.0.31
+pyparsing==3.0.9
+pytz==2022.4
+redis==4.3.4
 requests==2.28.1
+six==1.16.0
 soupsieve==2.3.2.post1
 SQLAlchemy==1.4.41
 urllib3==1.26.12
+vine==5.0.0
+wcwidth==0.2.5
 Werkzeug==2.2.2
+wrapt==1.14.1
 WTForms==3.0.1
